# ArgonGuard

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  SECURITY.md
.github/: dependabot.yml
.github/workflows/: core.yml  dotnet.yml  edge.yml  guard.yml  matrix.yml  nightly.yml  node.yml  php-mirror.yml  php.yml  python.yml  release.yml
core/: README.md  package-lock.json  package.json  tsconfig.json
core/src/: base64.ts  constantTime.ts  crypto.ts  errors.ts  hasher.ts  index.ts  input.ts  legacy.ts  phc.ts  policy.ts  profiles.ts  reasonCodes.ts  specVersion.ts
core/tests/: conformance.test.ts  phc.test.ts
docs/: architecture.html  寫個符合 OWASP 要求的密碼雜湊公用函式.md
docs/adr/: 0001-phc-storage-format.md  0002-parallelism-locked-to-1.md  0003-owasp-frontier-verification-policy.md  0004-engine-selection.md  0005-engine-memory-units.md  0006-edge-wasm-platform.md  README.md
docs/ops/: naming.md  operations.md  release-registration.md
docs/plans/: 2026-07-05-argonguard-implementation-plan.md
docs/reviews/: m5-adversarial-review.md  pplx-edge-wasm-review.md  pplx-plan-breakdown.md  pplx-plan-review-round1.md  pplx-plan-review-round2.md  pplx-review-round1.md  pplx-review-round2.md  pplx-review-round3.md
docs/specs/: 2026-07-05-argonguard-design.md  2026-07-06-edge-wasm-proposal.md
dotnet/: ArgonGuard.Passwords.sln  HARNESS_CMD  README.md
edge/: README.md  api-extractor.json  package-lock.json  package.json  tsconfig.dts.json  tsconfig.json  tsup.config.ts  wrangler.jsonc
edge/src/: index.ts  wasm.d.ts
edge/test-worker/: index.ts
edge/tests/: conformance.test.ts  memory-budget.test.ts  workerd.test.ts
node/: HARNESS_CMD  README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts
node/src/: errors.ts  hasher.ts  index.ts  input.ts  legacy.ts  nodeCrypto.ts  phc.ts  profiles.ts
node/tests/: conformance.test.ts  cross-check.test.ts  phc.test.ts  policy.test.ts  quickstart-example.test.ts  skeleton.test.ts  spec-alignment.test.ts  vectors.ts
node/tools/: harness.mjs
php/: .phpunit.result.cache  HARNESS_CMD  README.md  composer.json  phpunit.xml
php/src/: ArgonGuardException.php  ArgonGuardPasswordHasher.php  ArgonGuardProfile.php  InvalidInputException.php  MalformedHashException.php  PolicyViolationException.php  ProfileParameters.php  ReasonCodes.php  SpecVersion.php  UnsupportedAlgorithmException.php  UnsupportedEnvironmentException.php
php/tests/: ApiTest.php  ConformanceTest.php  DualProviderConsistencyTest.php  PhcParserTest.php  SkeletonTest.php  (+4 more)
python/: HARNESS_CMD  LICENSE  README.md  pyproject.toml
python/src/argonguard/passwords/: __init__.py  _engine.py  _errors.py  _hasher.py  _legacy.py  _phc.py  _policy.py  _profiles.py  _reasons.py
python/tests/: conftest.py  test_api.py  test_conformance.py  test_phc_parser.py  test_policy.py  test_quickstart_example.py  test_skeleton.py
python/tools/: harness.py
spec/: README.md  SPEC.md  engine-units.json  harness-contract.json  profiles.snapshot.json  reason-codes.json
(+56 files in other folders)
