[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "argonguard-passwords"
version = "0.1.0.dev0"
description = "OWASP-compliant Argon2id password hashing component. Implements ArgonGuard Spec 1.0 (PHC string format, OWASP frontier verification policy)."
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Megapower Asia LLC" }]
dependencies = ["argon2-cffi>=21.2"]

[project.urls]
Repository = "https://github.com/Megapower-Asia-LLC/ArgonGuard"

[project.optional-dependencies]
# bcrypt 僅供 README 遷移範例 example test 實跑（非 runtime 依賴；核心不出貨 legacy 演算法，SPEC L3）
dev = ["pytest>=8.0", "bcrypt>=4.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/argonguard"]

[tool.pytest.ini_options]
testpaths = ["tests"]
